--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "yarn build --watch",
     "build": "babel -x .ts -d dist --ignore **/*.spec.ts --no-copy-ignored --delete-dir-on-start src",
+    "serve": "serve",
     "test": "jest"
   },
   "dependencies": {
@@ -20,6 +21,7 @@
     "@types/jest": "^25.1.4",
     "@yarnpkg/pnpify": "^2.0.0-rc.19",
     "jest": "^25.1.0",
+    "serve": "^11.3.0",
     "typescript": "^3.8.3"
   }
 }
