--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "core-js": "^3.6.4"
+    "core-js": "^3.6.4",
+    "utility-types": "^3.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
