build: add support for import type in jest

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "strothj <jason@jasons.io>",
   "license": "MIT",
   "resolutions": {
+    "@babel/core": "^7.9.0",
     "prettier": "prettier/prettier#next"
   },
   "scripts": {
